--- a/front/resume/index.html
+++ b/front/resume/index.html
@@ -139,13 +139,13 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0"><a href="/coviddashboard">Covid-19 Dashboard</a></h3>
-            <div>A dashboard for data analysis about covid-19</div>
+            <div>Um dashboard para análise dos dados relacionados ao Covid-19. O sistema foi construí com Django REST Framework como Backend, e no Frontend foi utilizado Vue.js. Para desenhar os gráficos foi utilizado D3.js.</div>
           </div>
         </div>
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0"><a href="/blog">Personal Blog</a></h3>
-            <div>My personal blog</div>
+            <h3 class="mb-0"><a href="/blog">Blog Pessoal</a></h3>
+            <div>Neste blog postarei assuntos relacionados a área da programação, web development e games. O blog é uma aplicação Fullstack em Django.</div>
           </div>
         </div>
 
