--- a/front/resume/index.html
+++ b/front/resume/index.html
@@ -138,14 +138,23 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0"><a href="/coviddashboard">Covid-19 Dashboard</a></h3>
-            <div>Um dashboard para análise dos dados relacionados ao Covid-19. O sistema foi construí com Django REST Framework como Backend, e no Frontend foi utilizado Vue.js. Para desenhar os gráficos foi utilizado D3.js.</div>
+            <h3 class="mb-0"><a href="/coviddashboard">Covid-19 Dashboard (Em desenvolvimento)</a></h3>
+            <div>Um dashboard para análise dos dados relacionados ao Covid-19.</div>
+            <div>Feramentas utilizadas: Vue.js, D3.js e Django</div>
+          </div>
+        </div>
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0"><a href="/devradar">DevRadar (Em desenvolvimento)</a></h3>
+            <div>Um site semelhante ao Airbnb para encontrar desenovlvedores. A ideia é fazer uma pesquisa em um raio perto de sua localidade de programadores freelancers cadastrados no sistema.</div>
+            <div>Ferramentas utilizadas: React.js e Django REST Framework</div>
           </div>
         </div>
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0"><a href="/blog">Blog Pessoal</a></h3>
-            <div>Neste blog postarei assuntos relacionados a área da programação, web development e games. O blog é uma aplicação Fullstack em Django.</div>
+            <div>Neste blog postarei assuntos relacionados a área da programação, web development e games.</div>
+            <div>Ferramenta utilizada: Django</div>
           </div>
         </div>
 
