--- a/front/resume/index.html
+++ b/front/resume/index.html
@@ -53,9 +53,6 @@
           <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#presentation">Presentation</a>
-        </li>
-        <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
         </li>
       </ul>
@@ -72,7 +69,7 @@
         <div class="subheading mb-5">Barueri, SP · +55 (91) 98321-3832 ·
           <a href="mailto:yvanbrito96@gmail.com">yvanbrito96@gmail.com</a>
         </div>
-        <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+        <p class="lead mb-5">Meu nome é Yvan Brito. Me tornei Mestre em Ciência da Computação com foco em Visualização da Informação pela UFPA em 2020 e bacharel desde 2018 em Ciência da Computação pela mesma universidade. Programo desde 2013. Adoro programar nas horas vagas e estudar coisas sobre computação. Sou fanático por jogos e esse é meu hobby principal, tanto programá-los quanto jogá-los, e tenho como objetivo de vida tornar o mundo melhor através do meu trabalho. Espero que meu conteúdo seja útil na sua vida, me esforçarei para que seja!!!</p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/yvan-brito-70342ba5/">
             <i class="fab fa-linkedin-in"></i>
@@ -82,6 +79,9 @@
           </a>
           <a href="https://twitter.com/britoyvan">
             <i class="fab fa-twitter"></i>
+          </a>
+          <a target="blank" href="media/curriculo.pdf">
+            <i class="fa fa-download" aria-hidden="true"></i>
           </a>
         </div>
       </div>
@@ -138,6 +138,16 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
+            <h3 class="mb-0"><a href="https://github.com/gustavoresque/DataGenerator">Blocks: A Data Generator</a></h3>
+            <div>Aplicação desktop para geração de dados sintéticos que são produzidos
+              com o intuito de testar aplicações de visualização de dados e de
+              aprendizado de máquina. A aplicação foi implementada com a linguagem
+              Javascript utilizando o framework Electron. O sistema foi desenvolvido durante o meu mestrado.</div>
+            <div>Feramentas utilizadas: Electron.js, D3.js</div>
+          </div>
+        </div>
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
             <h3 class="mb-0"><a href="/coviddashboard">Covid-19 Dashboard (Em desenvolvimento)</a></h3>
             <div>Um dashboard para análise dos dados relacionados ao Covid-19.</div>
             <div>Feramentas utilizadas: Vue.js, D3.js e Django</div>
@@ -155,6 +165,33 @@
             <h3 class="mb-0"><a href="/blog">Blog Pessoal</a></h3>
             <div>Neste blog postarei assuntos relacionados a área da programação, web development e games.</div>
             <div>Ferramenta utilizada: Django</div>
+          </div>
+        </div>
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0"><a href="https://www.youtube.com/watch?v=K45dTKVcCRU">As Aventuras de Amaru</a></h3>
+            <div>Um jogo com o objetivo de auxiliar crianças com dificuldade de
+              aprendizado de leitura. Tal jogo foi desenvolvido em C# utilizando a
+              engine Unity. Durante a minha participação, foram publicado dois artigos
+              e o meu TCC.</div>
+            <div>Ferramenta utilizada: Unity</div>
+          </div>
+        </div>
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0"><a href="https://github.com/vfkami/Gamification">Gameficação do evento CSBC 2019</a></h3>
+            <div>Aplicação Android desenvolvida em Kotlin e backend usando o framework
+              Flask com a linguagem Python. O aplicativo é um leitor de código QR. O
+              objetivo do projeto era o de gameficar o evento durante os primeiros dias
+              com o intuito de obter dados sobre a frequência de participantes em cada
+              programação do evento. No início do evento o participante recebia um
+              código QR com as suas informações que foram cadastradas durante a
+              inscrição. Durante o evento aconteciam várias exposições simultâneas em
+              salas diferentes e em cada sala um monitor fazia a leitura do código do
+              participante e automaticamente enviava as informações do participante
+              para o servidor que contabilizava a presença e a pontuação do
+              participante.</div>
+            <div>Ferramenta utilizada: Kotlin e Flask</div>
           </div>
         </div>
 
@@ -227,9 +264,9 @@
 
         <div class="subheading mb-3">Workflow</div>
         <ul class="fa-ul mb-0">
-          <li>
+          <!-- <li>
             <i class="fa-li fa fa-check"></i>
-            Mobile-First, Responsive Design</li>
+            Mobile-First, Responsive Design</li> -->
           <li>
             <i class="fa-li fa fa-check"></i>
             Cross Browser Testing &amp; Debugging</li>
@@ -240,15 +277,6 @@
             <i class="fa-li fa fa-check"></i>
             Agile Development &amp; Scrum</li>
         </ul>
-      </div>
-    </section>
-
-    <hr class="m-0">
-
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="presentation">
-      <div class="w-100">
-        <h2 class="mb-5">Presentation</h2>
-        <p>Meu nome é Yvan Brito. Sou bacharel em Ciência da Computação pela UFPA em 2018 e Mestre em Ciência da Computação com foco em Visualização da Informação pela mesma universidade. Programo desde 2013. Adoro programar nas horas vagas e estudar coisas sobre computação. Sou fanático por jogos e esse é meu hobby principal, tanto programá-los quanto jogá-los. Espero que meu conteúdo seja útil na sua vida, me esforçarei para que seja!!!</p>
       </div>
     </section>
 
