--- a/front/resume/index.html
+++ b/front/resume/index.html
@@ -138,6 +138,42 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
+            <h3 class="mb-0"><a href="https://yvanbrito.github.io/">Portifólio de jogos</a></h3>
+            <div>Aqui mostro alguns jogos que implementei experimentalmente e também um que lancei na Play Store chamado Alpha que consiste no jogador
+              não deixar a bolinha cair criando plataformas em baixo dela para a mesma rebater e pegar impulso
+            </div>
+            <div>Feramentas utilizadas: Unity3D, C#</div>
+          </div>
+        </div>
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0"><a href="https://www.youtube.com/watch?v=K45dTKVcCRU">As Aventuras de Amaru</a></h3>
+            <div>Um jogo com o objetivo de auxiliar crianças com dificuldade de
+              aprendizado de leitura. Tal jogo foi desenvolvido em C# utilizando a
+              engine Unity. Durante a minha participação, foram publicado dois artigos
+              e o meu TCC.</div>
+            <div>Ferramenta utilizada: Unity3D, C#</div>
+          </div>
+        </div>
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0"><a href="https://github.com/vfkami/Gamification">Gameficação do evento CSBC 2019</a></h3>
+            <div>Aplicação Android desenvolvida em Kotlin e backend usando o framework
+              Flask com a linguagem Python. O aplicativo é um leitor de código QR. O
+              objetivo do projeto era o de gameficar o evento durante os primeiros dias
+              com o intuito de obter dados sobre a frequência de participantes em cada
+              programação do evento. No início do evento o participante recebia um
+              código QR com as suas informações que foram cadastradas durante a
+              inscrição. Durante o evento aconteciam várias exposições simultâneas em
+              salas diferentes e em cada sala um monitor fazia a leitura do código do
+              participante e automaticamente enviava as informações do participante
+              para o servidor que contabilizava a presença e a pontuação do
+              participante.</div>
+            <div>Ferramenta utilizada: Kotlin e Flask</div>
+          </div>
+        </div>
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
             <h3 class="mb-0"><a href="https://github.com/gustavoresque/DataGenerator">Blocks: A Data Generator</a></h3>
             <div>Aplicação desktop para geração de dados sintéticos que são produzidos
               com o intuito de testar aplicações de visualização de dados e de
@@ -165,33 +201,6 @@
             <h3 class="mb-0"><a href="/blog">Blog Pessoal</a></h3>
             <div>Neste blog postarei assuntos relacionados a área da programação, web development e games.</div>
             <div>Ferramenta utilizada: Django</div>
-          </div>
-        </div>
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0"><a href="https://www.youtube.com/watch?v=K45dTKVcCRU">As Aventuras de Amaru</a></h3>
-            <div>Um jogo com o objetivo de auxiliar crianças com dificuldade de
-              aprendizado de leitura. Tal jogo foi desenvolvido em C# utilizando a
-              engine Unity. Durante a minha participação, foram publicado dois artigos
-              e o meu TCC.</div>
-            <div>Ferramenta utilizada: Unity</div>
-          </div>
-        </div>
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0"><a href="https://github.com/vfkami/Gamification">Gameficação do evento CSBC 2019</a></h3>
-            <div>Aplicação Android desenvolvida em Kotlin e backend usando o framework
-              Flask com a linguagem Python. O aplicativo é um leitor de código QR. O
-              objetivo do projeto era o de gameficar o evento durante os primeiros dias
-              com o intuito de obter dados sobre a frequência de participantes em cada
-              programação do evento. No início do evento o participante recebia um
-              código QR com as suas informações que foram cadastradas durante a
-              inscrição. Durante o evento aconteciam várias exposições simultâneas em
-              salas diferentes e em cada sala um monitor fazia a leitura do código do
-              participante e automaticamente enviava as informações do participante
-              para o servidor que contabilizava a presença e a pontuação do
-              participante.</div>
-            <div>Ferramenta utilizada: Kotlin e Flask</div>
           </div>
         </div>
 
